--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -13,7 +13,7 @@
         <div class="vendor-header-content">
 
             <span class="new-vendor-name-style">
-                {{StateService.getCurrentUser().name}}
+                {{StateService.getCurrentUser().vendor.company_name}}
             </span>
             <span class="pull-right">
                     <span data-toggle="tooltip" data-placement="bottom" title="Edit Profile">
@@ -145,9 +145,9 @@
                         <img ng-src="{{product.photo.image_url}}"/>
 
                     </div>
-                    <div class="col-xs-9 col-sm-7">
-                        <h4>{{product.name}}</h4>
-                        {{product.description}}
+                    <div class="col-xs-9 col-sm-7 ">
+                        <div class="card-lable-style">{{product.name}}</div>
+                        <div class="location-details">{{product.description}}</div>
                     </div>
 
                     <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
@@ -201,7 +201,7 @@
             <div class="modal-body">  
                 <div class="container-fluid">                   
                     <form role="form" name="profileForm" novalidate>
-                        <div class="row">
+                       <!--  <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.imageField.$invalid }">
                                     <label for="item-image">Change Profile Image</label><br />
@@ -209,12 +209,12 @@
                                     <input onchange="angular.element(this).scope().fileNameChanged(this.files)" name="imageField" type="file" id="profile-image">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.company-name.$invalid }">
                                     <label for="company-name">Company Name</label> 
-                                    <input required ng-model="StateService.currentUser.vendor.company_name" type="text" name="company-name" class="form-control" id="company-name" placeholder="Company Name"/>
+                                    <input required ng-model="currentUser.vendor.company_name" type="text" name="company-name" class="form-control" id="company-name" placeholder="Company Name"/>
                                 </div>
                             </div>
                         </div>
@@ -281,9 +281,9 @@
                             <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.descriptionField.$invalid }">
                                     <label for="company-description">About Your Company<br>
-                                    <small>Maxlength 850 characters</small>
                                     </label>
                                     <textarea required ng-model="currentUser.vendor.description" type="text" name="descriptionField" class="form-control" id="company-description" placeholder="About Your Company" maxlength="850"/>
+                                    <p class="pull-right">{{850 - currentUser.vendor.description.length}} characters remaining</p>
                                 </div>
                             </div>
                         </div>
