Validation added for the vendor's profile editing.  Icon for editing vendor profile changed to a button.

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -871,6 +871,10 @@ hr{
   padding-right: 25px;
 }
 
+.full-container{
+  width:100%;
+}
+
 .vendor-product-image img{
   padding: 3px;
   border: 1px solid #d3d3d3;
