Carly made me do it.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -13,7 +13,7 @@
         <div class="vendor-header-content">
 
             <span class="new-vendor-name-style">
-                {{StateService.getCurrentUser().vendor.company_name}}
+                {{StateService.getCurrentUser().vendor.company_name}}<br>
             </span>
             <span class="new-hr-heading-style">
                 <span class="glyphicon glyphicon-map-marker"></span> {{StateService.getCurrentUser().vendor.address.city}}, {{StateService.getCurrentUser().vendor.address.state}}
