fixed spelling mistakes & changed fonts on splash page

--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -11,6 +11,12 @@ body {
     url('../images/sellerbanner-peas.jpg') !important;
 }
 
+.cover-heading{
+  font-family: 'Libre Baskerville', serif;
+  font-weight: bolder;
+  font-size: 38px;
+}
+
  .how-it-works {
   text-transform: uppercase;
  }
