--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -98,7 +98,7 @@
         <h4 class="modal-title">Account Already Created</h4>
       </div>
       <div class="modal-body">
-        <p>Oops! It looks like this Facebook account already has an beLocal account associated with it. Try signing in instead!</p>
+        <p>Oops! It looks like this Facebook account already has a beLocal account associated with it. Try signing in instead!</p>
       </div>
       <div class="modal-footer no-top-margin">
         <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
