Added error message for logging in without an account.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -106,3 +106,20 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<div class="modal fade" id="noValidAccountModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">No Valid Account</h4>
+      </div>
+      <div class="modal-body">
+        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first!</p>
+      </div>
+      <div class="modal-footer no-top-margin">
+        <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
