--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -8,7 +8,7 @@
     <br><br>
     <div class="row vendor-profile-header">
         <div class="col-md-5 new-vendor-avatar">
-            <img src="{{StateService.getCurrentUser().vendor.photo.image_url}}">
+            <img ng-src="{{StateService.getCurrentUser().vendor.photo.image_url}}">
         </div>
         <div class="vendor-header-content">
 
