Added product count.

--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -102,7 +102,7 @@
     <hr>
     <div class="row">
         <div class="col-xs-9 new-hr-heading-style">
-            PRODUCTS
+            {{vendorDetails.products.length}} PRODUCTS
         </div>
     </div>
     <hr>
