--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -52,6 +52,7 @@
   </div>
 </div>
 
+  <!-- VENDORS TAB -->
   <div class="tab-pane" id="vendors">
     <div class="container container-home-page">
       <div ng-repeat="vendor in vendors">
@@ -75,7 +76,8 @@
 </div>
 
 <div class="footerCopyright">
-  Copyright 2014 beLocal, Inc.
+  <span class="glyphicon glyphicon-copyright-mark" style="font-size:12px;"></span>
+   2014 beLocal, Inc.
 </div>
 
 <!-- Product Details Modal -->
