--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -26,7 +26,7 @@
     <div class="container container-home-page">
       <div class="row" id="masonry-market-container">
         <div class="col-trending ms-market-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="market in marketList" >
-          <market-card data="item"></market-card>
+          <market-card data="market"></market-card>
         </div>
       </div>
     </div>
