--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -547,7 +547,7 @@
                                 <div class="form-group">
                                     <label>Select the Market You're Selling At</label>
                                     <select ng-show="StateService.getAvailableMarketList().length > 0" ng-model="newLocationMarket" id="modalMarketPicker" class="form-control" ng-options="market.id as market.name for market in StateService.getAvailableMarketList()"></select>
-                                    <p ng-hide="StateService.getAvailableMarketList().length > 0">It looks like you're already selling at all the markets in town! Try <a class="pointer" ng-click="manuallyTriggerCustomLocation()">creating</a> a new custom location instead.</p> 
+                                    <p ng-hide="StateService.getAvailableMarketList().length > 0">It looks like you're already selling at all the markets in town! Try <a class="pointer beLocal-a" ng-click="manuallyTriggerCustomLocation()">creating</a> a new custom location instead.</p> 
                                 </div>   
                             </form>
                         </div>
