--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -36,7 +36,7 @@
               <div class="new-heading-style">
                 Sample Category
               </div>
-              <div class="row" id="masonry-container">
+              <div class="row" style="padding-top:5px" id="masonry-container">
                 <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in trendingProducts" >
                   <product-card data="item"></product-card>
                 </div>
